--- a/files/01.md
+++ b/files/01.md
@@ -1,5 +1,12 @@
 # `BETTER WAY 01` 사용 중인 파이썬의 버전을 알아두라
 
+> **기억해야 할 내용**
+> - 파이썬 3는 파이썬 최신 버전이며 현재 가장 잘 지원되고 있다. 따라서 여러분은 프로젝트에서 파이썬 3를 써야 한다.
+> - 여러분의 시스템에 있는 파이썬 실행 파일이 여러분이 원하는 버전인지 확인하라.
+> - 파이썬 2는 사용하지 말라. 2020년 1월 1일부터 파이썬 2는 더 이상 지원되지 않는다.
+
+---
+
 파이썬에는 다양한 버전이 있다. 
 - 파이썬 2는 이미 지원이 끝난 버전으로 사용이 권장되지 않는다. 
 - 대부분의 경우 파이썬 3를 사용하고, 사용 환경에 따라 파이썬 3 중에서도 세부 버전을 맞춰야 한다.
