--- a/files/02.md
+++ b/files/02.md
@@ -1,5 +1,12 @@
 # `BETTER WAY 02` PEP 8 스타일 가이드를 따르라
 
+> **기억해야 할 내용**
+> - 파이썬 코드를 작성할 때는 항상 파이썬 개선 제안 #8(PEP 8) 스타일 가이드를 따르라.
+> - 큰 파이썬 커뮤니티와 공통된 스타일을 공유하면 다른 사람과 협력할 때 도움이 된다.
+> - 일관성 있는 스타일을 사용하면 나중에 자신이 작성한 코드를 직접 수정할 때도 더 수월해진다.
+
+---
+
 `파이썬 개선 제안(Python Enhancement Proposal) #8`, 또는 `PEP 8`은 파이썬 코드를 어떤 형식으로 작성할지 알려주는 스타일 가이드다.
 
 - 코드 작성에서의 실수를 방지할 수 있음
